--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: WookieWeb
+author: Andy Woo
 email: wooandy@mac.com
 description: > # this means to ignore newlines until "baseurl:"
   Roooarrgh ur roo.
