--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Roooarrgh ur roo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
+logo: /assets/andy.jpg
 twitter_username: _wooandy
 instagram_username: _wooandy
 github_username:  wooandy
