--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,8 @@ github_username:  wooandy
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   
