--- a/_config.yml
+++ b/_config.yml
@@ -27,8 +27,8 @@ github_username:  wooandy
 
 # Build settings
 markdown: kramdown
-# theme: minima
-theme: jekyll-theme-minimal
+theme: minima
+# theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   
