--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ description: > # this means to ignore newlines until "baseurl:"
   Roooarrgh ur roo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wookieweb.com" # the base hostname & protocol for your site, e.g. http://example.com
+feed_items: 10
+feed_update_period: daily
+feed_update_frequency: 1
 logo: /assets/andy.jpg
 twitter_username: _wooandy
 instagram_username: _wooandy
