--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ logo: /assets/andy.jpg
 twitter_username: _wooandy
 instagram_username: _wooandy
 github_username:  wooandy
-
+rss: rss
 
 # Build settings
 markdown: kramdown
