--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,8 @@ instagram_username: _wooandy
 github_username:  wooandy
 rss: rss
 
+show_excerpts: false # set to true to show excerpts on the homepage
+
 # Build settings
 markdown: kramdown
 theme: minima
