--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: WookieWeb
 author: Andy Woo
 email: wooandy@mac.com
 description: > # this means to ignore newlines until "baseurl:"
-  Roooarrgh ur roo.
+  Roooarrgh ur roo. Crazylabel founder. Used to work for the Barbie’s company.  斷捨離 | GTD |  | Retropie
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://wookieweb.com" # the base hostname & protocol for your site, e.g. http://example.com
 feed_items: 10
