--- a/_config.yml
+++ b/_config.yml
@@ -28,6 +28,7 @@ twitter_username: _wooandy
 instagram_username: _wooandy
 github_username:  wooandy
 rss: rss
+timezone: Asia/Hong_Kong
 
 show_excerpts: false # set to true to show excerpts on the homepage
 
